
	* pygtk-gtkicontheme.xml Add.

	* pygtk-gtkiconinfo.xml Add.

	* pygtk-gtkinvisible.xml Add the set_screen() and get_screen() methods
	available in PyGTK 2.2

	* pygtk-gtkitemfactory.xml Add deprecation warning.

	* pygtk-gtklabel.xml Fix typo.

	* pygtk-gtkliststore.xml (set_column_types)
	(iter_is_valid) (reorder) (swap) (move_after) (move_before) Add
	descriptions for these methods.

2004-04-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkexpander.xml Add.

	* pygtk-gtkimcontext.xml Add return value description for
	"delete-surrounding" and "retrieve-surrounding" signals.

	* pygtk-gtkclipboard.xml Add the request_* and wait_for_targets
	method descriptions.

2004-04-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_toggle_actions) Add description of
	is_active item in toggle action tuple.
	(add_radio_actions) Add description of value and on_change parameters.
	Remove callback description from radio action tuple.

	* pygtk-gdkatom.xml Add.

	* pygtk-gdk-functions.xml (atom_intern) Remove.
	Fix dumb error.

	* pygtk-gtkclipboard.xml Add.

	* pygtk-gdk-classes.xml Add pygtk-gdkatom.xml.
	Hide unimplemented new classes

	* pygtk-gtk-classes Hide unimplemented new classes

	* pygtk-gtkaccelgroup.xml
	* pygtk-gtkbutton.xml
	* pygtk-gtkentrycompletion.xml
	* pygtk-gtkfilechooserdialog.xml
	* pygtk-gtkfontselectiondialog.xml
	* pygtk-gtkgenericcellrenderer.xml
	* pygtk-gdkatom.xml Fix some link errors.

2004-04-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaction.xml Add.

	* pygtk-gtkactiongroup.xml Add.

	* pygtk-gtkborder.xml Add.

2004-04-08  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkfilefilter.xml Fix links to get_needed() method. Fix custom
	function signature and description.

	* pygtk-gtkfontbutton.xml Add.

	* pygtk-gtkfontbutton.xml Add purpose description. Fix 
	GtkFontSelectionDialog links.

	* pygtk-gtkfontselectiondialog.xml Add note about lack of font filters,
	etc. in GTK+ 2.2 and above.
