@@ -21,6 +21,9 @@
 	(iter_is_valid) (reorder) (swap) (move_after) (move_before) Add
 	descriptions for these methods.
 
+	* pygtk-gtkmenu.xml (set_screen) (attach) (set_monitor) Add
+	descriptions for these methods.
+
 2004-04-13  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkexpander.xml Add.
